--- a/xpozed/config/config.json
+++ b/xpozed/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "xpozed_db",
+    "password": "password",
+    "database": "exampledb",
     "host": "localhost",
     "dialect": "mysql"
   },
