--- a/xpozed/package.json
+++ b/xpozed/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.6.5",
+    "nodemon": "^1.19.1",
     "save": "^2.4.0",
     "sequelize": "^5.8.6",
     "socket.io": "^2.2.0"
