--- a/xpozed/package.json
+++ b/xpozed/package.json
@@ -4,7 +4,7 @@
   "description": "Project 2 Starter",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "lint": "eslint --quiet .",
     "fix": "eslint --fix .",
     "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit"
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.6.5",
+    "nodemon": "^1.19.1",
     "save": "^2.4.0",
     "sequelize": "^5.8.6",
     "socket.io": "^2.2.0"
