--- a/xpozed/package.json
+++ b/xpozed/package.json
@@ -11,12 +11,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.6.5",
-    "nodemon": "^1.19.1",
+    "pg": "^7.12.0",
+    "pg-hstore": "^2.3.3",
     "save": "^2.4.0",
     "sequelize": "^5.8.6",
     "socket.io": "^2.2.0"
@@ -29,6 +31,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
     "prettier": "^1.17.1"
   }
 }
