--- a/xpozed/config/config.json
+++ b/xpozed/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
-    "database": "xposed_db",
+    "password": "Minnie12345!",
+    "database": "xposed",
     "host": "localhost",
     "dialect": "mysql"
   },
