--- a/xpozed/package.json
+++ b/xpozed/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
