--- a/xpozed/package.json
+++ b/xpozed/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "express-sessions": "^1.0.6",
     "mysql2": "^1.6.5",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
